Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ia0e4059c70a11bee3ddfd90a61c26010c6475a1b

--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -2691,7 +2691,7 @@
     <string name="advanced_battery_title" msgid="3005993394776555079">"Potrošnja baterije"</string>
     <string name="history_details_title" msgid="8628584613889559355">"Detalji istorije"</string>
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"Potrošnja baterije"</string>
-    <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"Prikaz korišćenja u prethodna 24 sata"</string>
+    <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"Pogledajte korišćenja u poslednja 24 sata"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"Korišćenje od poslednjeg potpunog punjenja"</string>
     <string name="battery_details_title" msgid="4531369291819754178">"Potrošnja baterije"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"Korišćenje detalja"</string>
@@ -3957,7 +3957,7 @@
     <string name="notification_priority_title" msgid="5554834239080425229">"Prioritet"</string>
     <string name="notification_channel_summary_priority" msgid="7225362351439076913">"Prikazuje se u vrhu odeljka za konverzacije kao plutajući oblačić, prikazuje sliku profila na zaključanom ekranu"</string>
     <string name="convo_not_supported_summary" msgid="4285471045268268048">"<xliff:g id="APP_NAME">%1$s</xliff:g> ne podržava većinu funkcija konverzacije. Ne možete da podesite konverzaciju kao prioritetnu i konverzacije se ne prikazuju kao plutajući oblačići."</string>
-    <string name="notification_channel_summary_min" msgid="8823399508450176842">"Na kliznom panelu skupite obaveštenja u jedan red"</string>
+    <string name="notification_channel_summary_min" msgid="8823399508450176842">"Na kliznom panelu su obaveštenja u jednom redu"</string>
     <string name="notification_channel_summary_low" msgid="5549662596677692000">"Bez zvuka i vibriranja"</string>
     <string name="notification_conversation_summary_low" msgid="6352818857388412326">"Bez zvuka i vibriranja i prikazuje se u nastavku odeljka za konverzacije"</string>
     <string name="notification_channel_summary_default" msgid="3674057458265438896">"Može da zvoni ili vibrira u zavisnosti od podešavanja telefona"</string>
@@ -5618,7 +5618,7 @@
     <string name="prevent_ringing_main_switch_title" msgid="4726252811262086643">"Koristi sprečavanje zvonjenja"</string>
     <string name="use_wifi_hotsopt_main_switch_title" msgid="3909731167290690539">"Koristi WiFi hotspot"</string>
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Koristi kačenje aplikacija"</string>
-    <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Koristi opcije za programera"</string>
+    <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Koristi opcije za programere"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Koristite uslugu štampanja"</string>
     <string name="multiple_users_main_switch_title" msgid="2759849884417772712">"Omogući više korisnika"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Koristi bežično otklanjanje grešaka"</string>
