--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -945,7 +945,7 @@
     <string name="wifi_notify_open_networks" msgid="2610323626246818961">"Über öffentliche Netzwerke informieren"</string>
     <string name="wifi_notify_open_networks_summary" msgid="191058832201741013">"Benachrichtigen, wenn ein leistungsstarkes öffentliches Netzwerk verfügbar ist"</string>
     <string name="wifi_wakeup" msgid="3834327315861781611">"WLAN automatisch aktivieren"</string>
-    <string name="wifi_wakeup_summary" msgid="5778059083790221465">"Wenn du in den Abdeckungsbereich gespeicherter WLANs kommst und die Signalqualität gut ist, wird die WLAN-Funktion automatisch wieder eingeschaltet"</string>
+    <string name="wifi_wakeup_summary" msgid="5778059083790221465">"Die WLAN-Funktion wird automatisch eingeschaltet, wenn du in den Abdeckungsbereich gespeicherter WLANs kommst und die Signalqualität gut ist."</string>
     <string name="wifi_wakeup_summary_no_location" msgid="681323616606485096">"Nicht verfügbar, weil die Einstellung \"Standort\" deaktiviert ist. Aktiviere die Einstellung "<annotation id="link">"Standort"</annotation>"."</string>
     <string name="wifi_wakeup_summary_scanning_disabled" msgid="1771489741850119751">"Nicht verfügbar, weil WLAN-Suche deaktiviert ist"</string>
     <string name="wifi_wakeup_summary_scoring_disabled" msgid="3615120120960539780">"Für diese Funktion musst du zuerst einen Anbieter von Netzwerkbewertungen auswählen"</string>
@@ -2403,9 +2403,9 @@
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"Kurzbefehl für Farbumkehr"</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="6955835010409034745">"Wenn „Farbumkehr“ aktiviert ist, werden helle Displays dunkel angezeigt.&lt;br/&gt;&lt;br/&gt; Hinweis: &lt;ol&gt; &lt;li&gt; Dunkle Farben werden hell.&lt;/li&gt; &lt;li&gt; Farben in Medien und Bildern werden verändert wiedergegeben.&lt;/li&gt; &lt;li&gt; Mit dem Modus „Dunkles Design“ kannst du auf einen dunklen Hintergrund umstellen. „Dunkles Design“ funktioniert nur in unterstützten Apps. „Farbumkehr“ hingegen funktioniert in allen Apps.&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Automatischer Klick (Verweildauer)"</string>
-    <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"Über automatische Klicks (Verweildauer)"</string>
+    <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"Über automatischer Klick (Verweildauer)"</string>
     <string name="accessibility_autoclick_footer_learn_more_content_description" msgid="7056189627042350691">"Weitere Informationen zu automatischen Klicks (Verweildauer)"</string>
-    <string name="accessibility_autoclick_description" msgid="6827042379062255307">"Automatische Klicks funktionieren mit einer verbundenen Maus. Du kannst festlegen, dass der Mauszeiger automatisch klickt, wenn er sich für eine bestimmte Zeit nicht bewegt."</string>
+    <string name="accessibility_autoclick_description" msgid="6827042379062255307">"Automatischer Klick funktionieren mit einer verbundenen Maus. Du kannst festlegen, dass der Mauszeiger automatisch klickt, wenn er sich für eine bestimmte Zeit nicht bewegt."</string>
     <string name="accessibility_autoclick_default_title" msgid="752429113115293087">"Aus"</string>
     <string name="accessibility_autoclick_short_title" msgid="7938302504358912984">"Kurz"</string>
     <string name="accessibility_autoclick_short_summary" msgid="4106953930081213514">"0,2 Sekunden"</string>
@@ -2467,7 +2467,7 @@
     <string name="daltonizer_mode_protanomaly_summary" msgid="482834207025141433">"Rot-Sehschwäche"</string>
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2837137091067433059">"Blau-Gelb-Sehschwäche"</string>
     <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Extradunkel"</string>
-    <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Display extradunkel machen"</string>
+    <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Display extradunkel aktivieren"</string>
     <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"Kurzbefehl für Extradunkel"</string>
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"Über die Funktion „Extradunkel“"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Das Display dunkler machen als die niedrigste Helligkeit deines Smartphones"</string>
@@ -5216,7 +5216,7 @@
     <string name="calls_preference" msgid="2166481296066890129">"Anrufeinstellung"</string>
     <string name="sms_preference" msgid="7742964962568219351">"SMS-Einstellung"</string>
     <string name="calls_and_sms_ask_every_time" msgid="3178743088737726677">"Jedes Mal fragen"</string>
-    <string name="mobile_network_summary_add_a_network" msgid="9079866102827526779">"Netz hinzufügen"</string>
+    <string name="mobile_network_summary_add_a_network" msgid="9079866102827526779">"Netzwerk hinzufügen"</string>
     <plurals name="mobile_network_summary_count" formatted="false" msgid="5173633860800230925">
       <item quantity="other"><xliff:g id="COUNT_1">%1$d</xliff:g> SIM-Karten</item>
       <item quantity="one"><xliff:g id="COUNT_0">%1$d</xliff:g> SIM-Karte</item>
