--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -4847,8 +4847,8 @@
     <string name="gesture_not_supported_dialog_message" msgid="5316512246119347889">"Δεν υποστηρίζεται για την προεπιλεγμένη εφαρμογή αρχικής οθόνης, <xliff:g id="DEFAULT_HOME_APP">%s</xliff:g>"</string>
     <string name="gesture_not_supported_positive_button" msgid="7909969459977021893">"Εναλλαγή προεπ. εφαρμογής αρχικής οθόνης"</string>
     <string name="assistant_gesture_category_title" msgid="2478251256585807920">"Ψηφιακός βοηθός"</string>
-    <string name="assistant_corner_gesture_title" msgid="1895061522687002106">"Σύρετε για επίκληση του βοηθού"</string>
-    <string name="assistant_corner_gesture_summary" msgid="7279576276455168075">"Σύρετε προς τα επάνω από μια από τις κάτω γωνίες για επίκληση της εφαρμογής ψηφιακού βοηθού."</string>
+    <string name="assistant_corner_gesture_title" msgid="1895061522687002106">"Σύρετε για άνοιγμα του βοηθού"</string>
+    <string name="assistant_corner_gesture_summary" msgid="7279576276455168075">"Σύρετε προς τα επάνω από μια από τις κάτω γωνίες για άνοιγμα της εφαρμογής ψηφιακού βοηθού."</string>
     <string name="information_label" msgid="6939310810756569298">"Πληροφορίες"</string>
     <string name="low_label" msgid="6525629096999711220">"Χαμηλή"</string>
     <string name="high_label" msgid="357503396626018487">"Υψηλή"</string>
