--- a/res/values-fr-rCA/strings.xml
+++ b/res/values-fr-rCA/strings.xml
@@ -3759,7 +3759,7 @@
     <string name="work_ringtone_title" msgid="4810802758746102589">"Sonnerie du téléphone professionnel"</string>
     <string name="work_notification_ringtone_title" msgid="2955312017013255515">"Son par défaut des notifications du profil professionnel"</string>
     <string name="work_alarm_ringtone_title" msgid="3369293796769537392">"Son par défaut des alarmes du profil professionnel"</string>
-    <string name="work_sound_same_as_personal" msgid="1836913235401642334">"Mêmes que le profil personnel"</string>
+    <string name="work_sound_same_as_personal" msgid="1836913235401642334">"Comme pour le profil personnel"</string>
     <string name="work_sync_dialog_title" msgid="7810248132303515469">"Utiliser les sons du profil personnel?"</string>
     <string name="work_sync_dialog_yes" msgid="5785488304957707534">"Confirmer"</string>
     <string name="work_sync_dialog_message" msgid="5066178064994040223">"Votre profil professionnel utilisera les mêmes sons que votre profil personnel"</string>
