--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -5491,7 +5491,7 @@
     <string name="carrier_wifi_network_title" msgid="5461382943873831770">"W+ નેટવર્ક"</string>
     <string name="sim_category_title" msgid="2341314000964710495">"સિમ"</string>
     <string name="downloaded_sim_category_title" msgid="8611467223348446658">"ડાઉનલોડ કરેલું સિમ"</string>
-    <string name="downloaded_sims_category_title" msgid="8779223441781763315">"ડાઉનલોડ કરેલા SIMS"</string>
+    <string name="downloaded_sims_category_title" msgid="8779223441781763315">"ડાઉનલોડ કરેલા સિમ"</string>
     <string name="sim_category_active_sim" msgid="1503823567818544012">"સક્રિય"</string>
     <string name="sim_category_inactive_sim" msgid="4068899490133820881">"નિષ્ક્રિય"</string>
     <string name="sim_category_default_active_sim" msgid="1208194173387987231">" / <xliff:g id="ID_1">%1$s</xliff:g> માટે ડિફૉલ્ટ"</string>
