--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -940,7 +940,7 @@
     <string name="wifi_sap_no_channel_error" msgid="2126487622024749402">"រលកសញ្ញា 5 GHz មិនមានផ្តល់ជូននៅក្នុងប្រទេសនេះទេ"</string>
     <string name="wifi_in_airplane_mode" msgid="1235412508135267981">"ពេល​ជិះ​យន្ត"</string>
     <string name="wifi_notify_open_networks" msgid="2610323626246818961">"ជូនដំណឹង​សម្រាប់​បណ្ដាញសាធារណៈ"</string>
-    <string name="wifi_notify_open_networks_summary" msgid="191058832201741013">"ជូនដំណឹងនៅពេលមានបណ្តាញសាធារណៈកម្រិតខ្ពស់"</string>
+    <string name="wifi_notify_open_networks_summary" msgid="191058832201741013">"ជូនដំណឹងនៅពេលមានបណ្តាញសាធារណៈគុណភាពខ្ពស់"</string>
     <string name="wifi_wakeup" msgid="3834327315861781611">"បើក Wi‑Fi ដោយស្វ័យប្រវត្តិ"</string>
     <string name="wifi_wakeup_summary" msgid="5778059083790221465">"Wi‑Fi នឹងបើកឡើងវិញនៅក្បែរបណ្តាញដែលមានគុណភាពខ្ពស់ដែលបានរក្សាទុក ដូចជាបណ្តាញ​នៅ​ផ្ទះ​របស់អ្នក"</string>
     <string name="wifi_wakeup_summary_no_location" msgid="681323616606485096">"មិន​អាច​ប្រើ​បាន​ទេ ​ពីព្រោះ​ទីតាំង​បាន​បិទ។ សូម​បើក"<annotation id="link">"ទីតាំង"</annotation>"។"</string>
@@ -2154,7 +2154,7 @@
     <string name="no_services" msgid="3898812785511572899">"មិន​សកម្ម"</string>
     <string name="runningservicedetails_services_title" msgid="11853795112787355">"សេវាកម្ម"</string>
     <string name="runningservicedetails_processes_title" msgid="5292271587797234038">"ដំណើរការ"</string>
-    <string name="service_stop" msgid="5712522600201308795">"ឈប់"</string>
+    <string name="service_stop" msgid="5712522600201308795">"បញ្ឈប់"</string>
     <string name="service_manage" msgid="3896322986828332075">"ការ​កំណត់"</string>
     <string name="service_stop_description" msgid="6327742632400026677">"សេវាកម្ម​នេះ​ត្រូវ​បាន​ចាប់ផ្ដើម​ដោយ​កម្មវិធី។ ការ​បញ្ឈប់​វា​អាច​ធ្វើ​ឲ្យ​កម្មវិធី​​បរាជ័យ។"</string>
     <string name="heavy_weight_stop_description" msgid="3086419998820881290">"មិន​អាច​បញ្ឈប់​កម្មវិធី​​​នេះ​ដោយ​សុវត្ថិភាព​បាន​ទេ។ បើ​អ្នក​បញ្ឈប់​វា អ្នក​អាច​បាត់បង់​ការងារ​បច្ចុប្បន្ន​របស់​អ្នក​មួយ​ចំនួន។"</string>
@@ -2236,7 +2236,7 @@
     <string name="testing_phone_info" product="tablet" msgid="1910768200608214456">"ព័ត៌មាន​កុំព្យូទ័រ​បន្ទះ"</string>
     <string name="testing_phone_info" product="default" msgid="1150527695827743906">"ព័ត៌មាន​ទូរស័ព្ទ"</string>
     <string name="input_methods_settings_title" msgid="7796027458321225550">"ការ​បញ្ចូល​អត្ថបទ"</string>
-    <string name="input_method" msgid="2982805181425436775">"វិធីសាស្ត្រ​បញ្ចូល"</string>
+    <string name="input_method" msgid="2982805181425436775">"វិធីបញ្ចូល"</string>
     <string name="current_input_method" msgid="3471068842881330883">"ក្ដារចុច​បច្ចុប្បន្ន"</string>
     <string name="input_method_selector" msgid="8463209725824763600">"កម្មវិធី​ជ្រើស​វិធីសាស្ត្រ​បញ្ចូល"</string>
     <string name="input_method_selector_show_automatically_title" msgid="6483428482089875034">"ស្វ័យប្រវត្តិ"</string>
@@ -2456,9 +2456,9 @@
     <string name="accessibility_shortcuts_settings_title" msgid="974740249671825145">"ផ្លូវកាត់​ភាពងាយស្រួល"</string>
     <string name="enable_quick_setting" msgid="6648073323202243604">"បង្ហាញ​នៅ​ក្នុង​ការ​កំណត់​​រហ័ស"</string>
     <string name="daltonizer_type" msgid="1715154680803795947">"របៀប​កែ"</string>
-    <string name="daltonizer_mode_deuteranomaly_title" msgid="3811397143576433035">"ការមើល​មិនឃើញ​ពណ៌​បៃតង"</string>
-    <string name="daltonizer_mode_protanomaly_title" msgid="6787594316700223938">"ការមើល​មិនឃើញ​ពណ៌ក្រហម"</string>
-    <string name="daltonizer_mode_tritanomaly_title" msgid="1869867447813349033">"ការមើល​មិនឃើញ​ពណ៌ខៀវ"</string>
+    <string name="daltonizer_mode_deuteranomaly_title" msgid="3811397143576433035">"ខ្វាក់ពណ៌បៃតង"</string>
+    <string name="daltonizer_mode_protanomaly_title" msgid="6787594316700223938">"ខ្វាក់ពណ៌ក្រហម"</string>
+    <string name="daltonizer_mode_tritanomaly_title" msgid="1869867447813349033">"ខ្វាក់ពណ៌ខៀវ"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"មាត្រដ្ឋានពណ៌​ប្រផេះ"</string>
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="791173297742998942">"ក្រហម-បៃតង"</string>
     <string name="daltonizer_mode_protanomaly_summary" msgid="482834207025141433">"ក្រហម-បៃតង"</string>
@@ -2549,10 +2549,10 @@
     <string name="accessibility_service_action_perform_description" msgid="7807832069800034738">"វា​អាចតាមដានអន្តរកម្មរបស់អ្នកជាមួយនឹងកម្មវិធី ឬឧបករណ៍ចាប់​សញ្ញាហាតវែរ និងធ្វើអន្តរកម្ម​ជាមួយកម្មវិធីនានា​ជំនួសឱ្យអ្នក។"</string>
     <string name="accessibility_dialog_button_allow" msgid="8274918676473216697">"អនុញ្ញាត"</string>
     <string name="accessibility_dialog_button_deny" msgid="2037249860078259284">"បដិសេធ"</string>
-    <string name="accessibility_dialog_button_stop" msgid="7295448112784528196">"ឈប់"</string>
+    <string name="accessibility_dialog_button_stop" msgid="7295448112784528196">"បញ្ឈប់"</string>
     <string name="accessibility_dialog_button_cancel" msgid="4813234247237851121">"បោះបង់"</string>
     <string name="disable_service_title" msgid="2909108731776956167">"បញ្ឈប់ <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
-    <string name="disable_service_message" msgid="4814173941688548016">"ការចុច <xliff:g id="STOP">%1$s</xliff:g> នឹងបញ្ឈប់ <xliff:g id="SERVICE">%2$s</xliff:g> ។"</string>
+    <string name="disable_service_message" msgid="4814173941688548016">"ការចុចលើពាក្យ \"<xliff:g id="STOP">%1$s</xliff:g>\" នឹងបញ្ឈប់ <xliff:g id="SERVICE">%2$s</xliff:g>។"</string>
     <string name="accessibility_no_services_installed" msgid="3725569493860028593">"គ្មាន​សេវាកម្ម​បាន​ដំឡើង"</string>
     <string name="accessibility_no_service_selected" msgid="1310596127128379897">"មិនបានជ្រើសរើសសេវាកម្មណាមួយឡើយ"</string>
     <string name="accessibility_service_default_description" msgid="7801435825448138526">"គ្មាន​ការ​ពណ៌នា​បាន​ផ្ដល់។"</string>
@@ -2660,7 +2660,7 @@
     <string name="advanced_battery_title" msgid="3005993394776555079">"ការប្រើប្រាស់ថ្ម"</string>
     <string name="history_details_title" msgid="8628584613889559355">"ព័ត៌មាន​លម្អិត​ប្រវត្តិ"</string>
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"ការប្រើប្រាស់ថ្ម"</string>
-    <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"មើលការប្រើប្រាស់ក្នុងរយៈពេល 24 ចុងក្រោយ"</string>
+    <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"មើលការប្រើ 24 ម៉ោងចុងក្រោយ"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"មើលការប្រើប្រាស់ពីការសាកថ្មពេញចុងក្រោយ"</string>
     <string name="battery_details_title" msgid="4531369291819754178">"ការប្រើប្រាស់ថ្ម"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"ព័ត៌មាន​លម្អិត​នៃការ​ប្រើ"</string>
@@ -3639,7 +3639,7 @@
     <string name="vibrate_when_ringing_option_always_vibrate" msgid="968652667232075466">"ញ័រ​ជានិច្ច"</string>
     <string name="vibrate_when_ringing_option_ramping_ringer" msgid="2798848945803840348">"ញ័រ​សិន រួចរោទ៍​បន្តិចម្តងៗ"</string>
     <string name="other_sound_settings" msgid="5468360269346162072">"សំឡេង​ផ្សេង​ទៀត"</string>
-    <string name="spatial_audio_title" msgid="6591051622375191603">"សំឡេង​ខ្ទររណ្ដំ"</string>
+    <string name="spatial_audio_title" msgid="6591051622375191603">"សំឡេងលំហ"</string>
     <string name="dial_pad_tones_title" msgid="3536945335367914892">"សំឡេង​បន្ទះ​លេខ"</string>
     <string name="screen_locking_sounds_title" msgid="5695030983872787321">"សំឡេង​ចាក់សោ​អេក្រង់"</string>
     <string name="charging_sounds_title" msgid="5261683808537783668">"ការ​ញ័រ និងសំឡេង​សាកថ្ម"</string>
@@ -4706,7 +4706,7 @@
     <string name="restrict_background_blocklisted" msgid="2308345280442438232">"ទិន្នន័យផ្ទៃខាងក្រោយបានបិទ"</string>
     <string name="data_saver_on" msgid="7848893946018448793">"បើក"</string>
     <string name="data_saver_off" msgid="5891210864117269045">"បិទ"</string>
-    <string name="data_saver_switch_title" msgid="7111538580123722959">"ប្រើ​កម្មវិធី​សន្សំ​សំចៃ​ទិន្នន័យ"</string>
+    <string name="data_saver_switch_title" msgid="7111538580123722959">"ប្រើ​មុខងារ​សន្សំ​សំចៃ​ទិន្នន័យ"</string>
     <string name="unrestricted_app_title" msgid="7117585996574329284">"ការប្រើប្រាស់ទិន្នន័យគ្មានកំណត់"</string>
     <string name="unrestricted_app_summary" msgid="282698963532000403">"អនុញ្ញាតឲ្យចូលប្រើប្រាស់​ទិន្នន័យគ្មានកំណត់ នៅពេលបើកមុខងារសន្សំសំចៃទិន្នន័យ"</string>
     <string name="home_app" msgid="6056850504746902747">"កម្មវិធីអេក្រង់ដើម"</string>
@@ -4769,8 +4769,8 @@
     <string name="special_access_more" msgid="132919514147475846">"មើលច្រើនទៀត"</string>
     <string name="confirm_convert_to_fbe_warning" msgid="3783325656948378111">"តើពិតជាចង់លុបទិន្នន័យអ្នកប្រើ និងបម្លែងទៅការអ៊ិនគ្រីបឯកសារមែនទេ?"</string>
     <string name="button_confirm_convert_fbe" msgid="339648921918438106">"លុប និងបម្លែង"</string>
-    <string name="reset_shortcut_manager_throttling" msgid="2183940254903144298">"កំណត់ការកម្រិតការវាយតម្លៃលើ ShortcutManager ឡើងវិញ"</string>
-    <string name="reset_shortcut_manager_throttling_complete" msgid="8949943009096885470">"ការកម្រិតការវាយតម្លៃ ShortcutManager ត្រូវបានកំណត់ឡើងវិញ"</string>
+    <string name="reset_shortcut_manager_throttling" msgid="2183940254903144298">"កំណត់ដែនកំហិតអត្រា ShortcutManager ឡើងវិញ"</string>
+    <string name="reset_shortcut_manager_throttling_complete" msgid="8949943009096885470">"ដែនកំហិតអត្រា ShortcutManager ត្រូវបានកំណត់ឡើងវិញ"</string>
     <string name="notification_suggestion_title" msgid="6309263655965785411">"គ្រប់គ្រង​ព័ត៌មាន​លើអេក្រង់ចាក់សោ"</string>
     <string name="notification_suggestion_summary" msgid="7615611244249276113">"បង្ហាញ ឬលាក់មាតិកាជូនដំណឹង"</string>
     <string name="page_tab_title_summary" msgid="7188875610123234454">"ទាំងអស់"</string>
@@ -4794,7 +4794,7 @@
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"ជួយបង្កើន​កម្រិតថាមពលថ្ម"</string>
     <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"ប្រអប់​ការ​កំណត់​រហ័ស​សម្រាប់​អ្នកអភិវឌ្ឍន៍"</string>
     <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"បិទ​ការអស់ម៉ោង​សម្រាប់​ការផ្ដល់សិទ្ធិ adb"</string>
-    <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"បិទ​ការដកសិទ្ធិ adb ដោយស្វ័យប្រវត្តិ​សម្រាប់ប្រព័ន្ធ​ដែលមិនបានភ្ជាប់​ឡើងវិញ​ក្នុងអំឡុង​រយៈពេល​លំនាំដើម (7 ថ្ងៃ) ឬ​រយៈពេល​ដែលបាន​កំណត់​រចនាសម្ព័ន្ធ​ដោយអ្នក​ប្រើប្រាស់ (តិចបំផុត 1 ថ្ងៃ)។"</string>
+    <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"បិទ​ការដកសិទ្ធិ adb ដោយស្វ័យប្រវត្តិ​សម្រាប់ប្រព័ន្ធ​ដែលមិនបានភ្ជាប់​ឡើងវិញ​ក្នុងអំឡុង​រយៈពេល​លំនាំដើម (7 ថ្ងៃ) ឬ​រយៈពេល​ដែលបាន​កំណត់​ដោយអ្នក​ប្រើប្រាស់ (តិចបំផុត 1 ថ្ងៃ)។"</string>
     <string name="winscope_trace_quick_settings_title" msgid="4104768565053226689">"ដាន Winscope"</string>
     <string name="sensors_off_quick_settings_title" msgid="8472151847125917167">"ឧបករណ៍​ចាប់សញ្ញាបានបិទ"</string>
     <string name="managed_profile_settings_title" msgid="3400923723423564217">"ការកំណត់កម្រងព័ត៌មានការងារ"</string>
