--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -298,8 +298,8 @@
     <string name="location_settings_primary_switch_title" msgid="8849081766644685127">"တည်နေရာကို သုံးရန်"</string>
     <string name="location_settings_summary_location_off" msgid="4797932754681162262">"ပိတ်"</string>
     <plurals name="location_settings_summary_location_on" formatted="false" msgid="1019959038518185676">
-      <item quantity="other">ဖွင့်ထားသည် - အက်ပ် <xliff:g id="COUNT_1">%1$d</xliff:g> ခုက တည်နေရာ ဝင်သုံးခွင့်ရှိပါသည်</item>
-      <item quantity="one">ဖွင့်ထားသည် - အက်ပ် <xliff:g id="COUNT_0">%1$d</xliff:g> ခုက တည်နေရာ ဝင်သုံးခွင့်ရှိပါသည်</item>
+      <item quantity="other">ဖွင့် - အက်ပ် <xliff:g id="COUNT_1">%1$d</xliff:g> ခုက တည်နေရာ ဝင်သုံးခွင့်ရှိသည်</item>
+      <item quantity="one">ဖွင့် - အက်ပ် <xliff:g id="COUNT_0">%1$d</xliff:g> ခုက တည်နေရာ ဝင်သုံးခွင့်ရှိသည်</item>
     </plurals>
     <string name="location_settings_loading_app_permission_stats" msgid="6054103701535557342">"ဖွင့်နေသည်…"</string>
     <string name="location_settings_footer_general" msgid="1040507068701188821">"အနီးတစ်ဝိုက်ရှိ စက်များ၏ ခွင့်ပြုချက်ကိုရထားသော အက်ပ်များက ချိတ်ဆက်ထားသောစက်များ၏ ဆက်စပ်နေရာကို သတ်မှတ်နိုင်သည်။"</string>
@@ -1005,7 +1005,7 @@
     <string name="rx_wifi_speed" msgid="5167966079215111232">"လက်ခံခြင်းလင့်ခ် အမြန်နှုန်း"</string>
     <string name="wifi_speed" msgid="6562147734565434513">"လိုင်းအမြန်နှုန်း"</string>
     <string name="wifi_frequency" msgid="3120998420184702834">"လှိုင်းနှုန်း"</string>
-    <string name="wifi_ip_address" msgid="8903577251845268209">"အိုင်ပီလိပ်စာ"</string>
+    <string name="wifi_ip_address" msgid="8903577251845268209">"IP လိပ်စာ"</string>
     <string name="passpoint_label" msgid="6513669696739302866">"မှတစ်ဆင့် သိမ်းရန်"</string>
     <string name="passpoint_content" msgid="5219226173518418335">"<xliff:g id="NAME">%1$s</xliff:g> အထောက်အထားများ"</string>
     <string name="wifi_eap_method" msgid="3776009521349381742">"EAP နည်းလမ်း"</string>
@@ -1130,7 +1130,7 @@
     <string name="wifi_advanced_device_mac_address_title" msgid="6155800851233164411">"စက်ပစ္စည်း MAC လိပ်စာ"</string>
     <string name="wifi_advanced_randomized_mac_address_title" msgid="3930671320234553088">"ကျပန်းလုပ်ထားသည့် MAC လိပ်စာ"</string>
     <string name="wifi_advanced_randomized_mac_address_disconnected_title" msgid="2755843130417523727">"ကျပန်းလုပ်ထားသော MAC လိပ်စာ (နောက်ဆုံးသုံးထားသည့်)"</string>
-    <string name="wifi_advanced_ip_address_title" msgid="4265355419782184514">"အိုင်ပီလိပ်စာ"</string>
+    <string name="wifi_advanced_ip_address_title" msgid="4265355419782184514">"IP လိပ်စာ"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"ကွန်ရက် အသေးစိတ်များ"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Subnet ကွင်းဆက်နံပါတ်"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"အမျိုးအစား"</string>
@@ -2625,9 +2625,9 @@
     <string name="background_activity_warning_dialog_title" msgid="3449566823290744823">"နောက်ခံလုပ်ဆောင်ချက်ကို ကန့်သတ်လိုပါသလား။"</string>
     <string name="background_activity_warning_dialog_text" msgid="8202776985767701095">"အက်ပ်အတွက် နောက်ခံလုပ်ဆောင်ချက်ကို ကန့်သတ်လိုက်ပါက ပုံမှန်အလုပ်လုပ်မည် မဟုတ်ပါ"</string>
     <string name="background_activity_disabled_dialog_text" msgid="4053170297325882494">"ဤအက်ပ်ကို ဘက်ထရီချိန်ညှိသုံးရန် သတ်မှတ်မထားသဖြင့် ကန့်သတ်၍မရပါ။\n\nအက်ပ်ကိုကန့်သတ်ရန် ဘက်ထရီချိန်ညှိသုံးခြင်း အရင်ဖွင့်ပါ။"</string>
-    <string name="manager_battery_usage_unrestricted_title" msgid="2426486290463258032">"မကန့်သတ်ခြင်း"</string>
-    <string name="manager_battery_usage_optimized_title" msgid="8080765739761921817">"ပိုကောင်းအောင်လုပ်ခြင်း"</string>
-    <string name="manager_battery_usage_restricted_title" msgid="7702863764130323118">"ကန့်သတ်ထားသည်"</string>
+    <string name="manager_battery_usage_unrestricted_title" msgid="2426486290463258032">"အကန့်အသတ်မဲ့"</string>
+    <string name="manager_battery_usage_optimized_title" msgid="8080765739761921817">"ပိုကောင်းအောင်လုပ်ရန်"</string>
+    <string name="manager_battery_usage_restricted_title" msgid="7702863764130323118">"ကန့်သတ်ရန်"</string>
     <string name="manager_battery_usage_unrestricted_summary" msgid="6819279865465667692">"ကန့်သတ်ချက်များမရှိဘဲ ဘက်ထရီ အသုံးပြုမှုကို နောက်ခံတွင် ခွင့်ပြုသည်။ ဘက်ထရီ ပိုသုံးနိုင်သည်။"</string>
     <string name="manager_battery_usage_optimized_summary" msgid="1332545476428039900">"သင်၏အသုံးပြုမှုပေါ် အခြေခံ၍ ပိုကောင်းအောင်လုပ်သည်။ အက်ပ်အများစုအတွက် အကြံပြုထားသည်။"</string>
     <string name="manager_battery_usage_restricted_summary" msgid="8324695640704416905">"နောက်ခံတွင်ရှိနေစဉ် ဘက်ထရီ အသုံးပြုမှုကို ကန့်သတ်သည်။ အက်ပ်သည် မျှော်မှန်းထားသည့်အတိုင်း အလုပ်မလုပ်နိုင်ပါ။ အကြောင်းကြားချက်များ ကြန့်ကြာနိုင်ပါသည်။"</string>
@@ -3175,12 +3175,12 @@
     <string name="data_usage_restrict_denied_dialog" msgid="8599940395497268584">"မိုဘိုင်းဒေတာကို ကန့်သတ်မှုပြုလုပ်ထားသည့် အခါတွင်သာ နောက်ခံ၌ ဒေတာအသုံးပြုမှုကို ကန့်သတ်နိုင်ပါသည်။"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2048411447974361181">"ဒေတာ အော်တို-စင့်ခ် ဖွင့်မလား။"</string>
     <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="6387714350903085918">"ဝဘ်ပေါ်တွင် သင်၏ အကောင့်အတွက်လုပ်သည့် အပြောင်းအလဲအားလုံးကို သင့်တက်ဘလက်သို့ အလိုအလျောက် ကူးပေးမည်။ \n\nအချို့အကောင့်များသည် သင့်တက်ဘလက်သို့ ပြုလုပ်သည့် အပြောင်းအလဲများကို ဝဘ်ဆီသို့ အလိုအလျောက် ကူးပေးနိုင်ပါသည်။ Google အကောင့်၏ အလုပ်လုပ်ပုံ ဖြစ်ပါသည်။"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="6457107552266187107">"သင်က ဝဘ်ပေါ်ရှိ သင်၏ အကောင့်ထဲ ပြုလုပ်သည့် အပြောင်းအလဲ မှန်သမျှကို သင့်ဖုန်းထံသို့ အလိုအလျောက် ကူးပေးမည်။ \n\nအချို့ အကောင့်များသည် သင်က ဖုန်းတွင်ပြုလုပ်လိုက်သည့် အပြောင်းအလဲ မှန်သမျှကို ဝဘ်ဆီသို့ အလိုအလျောက် ကူးပေးနိုင်ပါသေးသည်။ Google အကောင့်က ထိုသို့ အလုပ်လုပ်ပါသည်။"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="6457107552266187107">"ဝဘ်ပေါ်တွင် သင်၏ အကောင့်တွင်း ပြုလုပ်သည့် အပြောင်းအလဲအားလုံးကို သင့်ဖုန်းထံသို့ အလိုအလျောက် ကူးပေးမည်။ \n\nအချို့ အကောင့်များသည် သင်က ဖုန်းတွင်ပြုလုပ်လိုက်သည့် အပြောင်းအလဲအားလုံးကိုလည်း ဝဘ်ဆီသို့ အလိုအလျောက် ကူးပေးနိုင်ပါသည်။ Google Account က ဤသို့ အလုပ်လုပ်ပါသည်။"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="1783917145440587470">"ဒေတာ အော်တိုစင့်ခ် ပိတ်မလား။"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="6523112583569674837">"၎င်းသည် ဒေတာနှင့် ဘက်ထရီအသုံးပြုမှုကို လျှော့ချပေးမည်၊ သို့သော် လတ်တလောအချက်အလက်များကို ရယူရန် သင်ကိုယ်တိုင် အကောင့်တစ်ခုချင်းကို စင့်ခ်လုပ်ရမည်။ အပ်ဒိတ်များထွက်သည့် အကြောင်းကြားချက်များကိုမူ သင်လက်ခံရရှိတော့မည်မဟုတ်ပါ။"</string>
     <string name="data_usage_cycle_editor_title" msgid="2019035830921480941">"ဒေတာသုံးစက်ဝန်း ပြန်စရက်"</string>
     <string name="data_usage_cycle_editor_subtitle" msgid="1026234456777365545">"လစဥ်၏ ရက်စွဲ"</string>
-    <string name="data_usage_cycle_editor_positive" msgid="6110165528024717527">"အတည်ပြုရန်"</string>
+    <string name="data_usage_cycle_editor_positive" msgid="6110165528024717527">"သတ်မှတ်ရန်"</string>
     <string name="data_usage_warning_editor_title" msgid="5252748452973120016">"ဒေတာအသုံးပြုမှုသတိပေးချက် သတ်မှတ်ရန်"</string>
     <string name="data_usage_limit_editor_title" msgid="8826855902435008518">"ဒေတာအသုံးပြုမှု ကန့်သတ်ရန်"</string>
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"ဒေတာအသုံးပြုမှုအား ကန့်သတ်ခြင်း"</string>
@@ -3790,7 +3790,7 @@
     <string name="asst_capabilities_actions_replies_summary" msgid="416234323365645871">"အကြံပြုထားသော လုပ်ဆောင်ချက်များနှင့် ပြန်ကြားချက်များကို အလိုအလျောက်ပြသပါ"</string>
     <string name="notification_history_summary" msgid="5434741516307706892">"မကြာသေးမီကနှင့် မှေးထားသည့် အကြောင်းကြားချက်များကို ပြရန်"</string>
     <string name="notification_history" msgid="8663811361243456201">"အကြောင်းကြားချက် မှတ်တမ်း"</string>
-    <string name="notification_history_toggle" msgid="9093762294928569030">"အကြောင်းကြားချက်မှတ်တမ်းကို သုံးပါ"</string>
+    <string name="notification_history_toggle" msgid="9093762294928569030">"အကြောင်းကြားချက်မှတ်တမ်းကို သုံးရန်"</string>
     <string name="notification_history_off_title_extended" msgid="853807652537281601">"အကြောင်းကြားချက် မှတ်တမ်းကို ပိတ်ထားသည်"</string>
     <string name="notification_history_off_summary" msgid="671359587084797617">"မကြာသေးမီကနှင့် မှေးထားသည့် အကြောင်းကြားချက်များကို ကြည့်ရန် အကြောင်းကြားချက်မှတ်တမ်းကို ဖွင့်ပါ"</string>
     <string name="history_toggled_on_title" msgid="4518001110492652830">"မကြာသေးမီက အကြောင်းကြားချက်များ မရှိပါ"</string>
@@ -3813,9 +3813,9 @@
     <string name="bubbles_feature_disabled_dialog_text" msgid="5275666953364031055">"ဤအက်ပ်အတွက် ပူဖောင်းကွက်များဖွင့်ခြင်းက သင့်စက်တွင်လည်း ပူဖောင်းကွက်များ ဖွင့်လိုက်ပါမည်။\n\n၎င်းက ပူဖောင်းကွက်ဖွင့်ရန် ခွင့်ပြုသည့် အခြားအက်ပ် (သို့) စကားဝိုင်းများတွင် သက်ရောက်မှုရှိပါသည်။"</string>
     <string name="bubbles_feature_disabled_button_approve" msgid="2042628067101419871">"ဖွင့်ရန်"</string>
     <string name="bubbles_feature_disabled_button_cancel" msgid="8963409459448350600">"မလုပ်တော့"</string>
-    <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"ဖွင့်ထားသည် / စကားဝိုင်းများကို မျောနေသောသင်္ကေတများအဖြစ် မြင်နိုင်သည်"</string>
-    <string name="notifications_bubble_setting_title" msgid="8287649393774855268">"ပူဖောင်းကွက်များပြရန် အက်ပ်များကို ခွင့်ပြုရန်"</string>
-    <string name="notifications_bubble_setting_description" msgid="7336770088735025981">"အချို့စကားဝိုင်းများကို အခြားအက်ပ်များပေါ်တွင် မျောနေသောသင်္ကေတများအဖြစ် မြင်ရမည်"</string>
+    <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"ဖွင့် / စကားဝိုင်းများကို မျောနေသောသင်္ကေတအဖြစ် မြင်နိုင်သည်"</string>
+    <string name="notifications_bubble_setting_title" msgid="8287649393774855268">"အက်ပ်များကို ပူဖောင်းကွက်ပြခွင့်ပြုရန်"</string>
+    <string name="notifications_bubble_setting_description" msgid="7336770088735025981">"အချို့စကားဝိုင်းများကို အခြားအက်ပ်များထိပ်ပိုင်းတွင် မျောနေသောသင်္ကေတအဖြစ် မြင်ရမည်"</string>
     <string name="bubble_app_setting_all" msgid="312524752846978277">"စကားဝိုင်းအားလုံး ပူဖောင်းကွက်ဖွင့်နိုင်သည်"</string>
     <string name="bubble_app_setting_selected" msgid="4324386074198040675">"ရွေးထားသော စကားဝိုင်းများ ပူဖောင်းကွက်ဖွင့်နိုင်သည်"</string>
     <string name="bubble_app_setting_none" msgid="8643594711863996418">"ဘာကိုမျှ ပူဖောင်းကွက်ဖွင့်၍ မရပါ"</string>
@@ -3911,11 +3911,11 @@
     <string name="notification_priority_title" msgid="5554834239080425229">"ဦးစားပေး"</string>
     <string name="notification_channel_summary_priority" msgid="7225362351439076913">"စကားဝိုင်းကဏ္ဍ၏ ထိပ်ပိုင်းတွင် ပြပြီး ပူဖောင်းကွက်အဖြစ် မြင်ရသည်၊ လော့ခ်ချထားချိန် မျက်နှာပြင်တွင် ပရိုဖိုင်ပုံကို ပြသည်"</string>
     <string name="convo_not_supported_summary" msgid="4285471045268268048">"<xliff:g id="APP_NAME">%1$s</xliff:g> က စကားဝိုင်းဝန်ဆောင်မှု အများစုကို မပံ့ပိုးပါ။ စကားဝိုင်းကို ဦးစားပေးအဖြစ် သတ်မှတ်၍မရပါ၊ ထို့ပြင် စကားဝိုင်းများကို မျောနေသောပူဖောင်းကွက်များအဖြစ် မြင်ရမည်မဟုတ်ပါ။"</string>
-    <string name="notification_channel_summary_min" msgid="8823399508450176842">"ဆွဲချအကွက်တွင် အကြောင်းကြားချက်များကို လိုင်းတစ်လိုင်းအဖြစ် လျှော့ပြသည်"</string>
+    <string name="notification_channel_summary_min" msgid="8823399508450176842">"ဆွဲချအကွက်တွင် အကြောင်းကြားချက်များကို တစ်လိုင်းတည်း ချုံ့၍ပြသည်"</string>
     <string name="notification_channel_summary_low" msgid="5549662596677692000">"အသံ သို့မဟုတ် တုန်ခါမှုမရှိပါ"</string>
     <string name="notification_conversation_summary_low" msgid="6352818857388412326">"အသံ သို့မဟုတ် တုန်ခါမှုမရှိပါ၊ စကားဝိုင်းကဏ္ဍ၏ အောက်ပိုင်းတွင် မြင်ရသည်"</string>
     <string name="notification_channel_summary_default" msgid="3674057458265438896">"ဖုန်းဆက်တင်များပေါ် အခြေခံပြီး အသံမြည်နိုင်သည် သို့မဟုတ် တုန်ခါနိုင်သည်"</string>
-    <string name="notification_channel_summary_high" msgid="3411637309360617621">"စက်ကို လော့ခ်ဖွင့်ထားပါက အကြောင်းကြားချက်များကို မျက်နှာပြင်၏ထိပ်တွင် နဖူးစည်းအဖြစ် ပြသပါ"</string>
+    <string name="notification_channel_summary_high" msgid="3411637309360617621">"စက်ကို လော့ခ်ဖွင့်ထားပါက အကြောင်းကြားချက်များကို ဖန်သားပြင်၏ထိပ်တွင် နဖူးစည်းအဖြစ် ပြသပါ"</string>
     <string name="notification_switch_label" msgid="8029371325967501557">"\"<xliff:g id="APP_NAME">%1$s</xliff:g>\" အကြောင်းကြားချက်အားလုံး"</string>
     <string name="notification_app_switch_label" msgid="4422902423925084193">"<xliff:g id="APP_NAME">%1$s</xliff:g> အကြောင်းကြားချက် အားလုံး"</string>
     <string name="default_notification_assistant" msgid="243718059890346442">"အလိုက်သင့် အကြောင်းကြားချက်များ"</string>
@@ -3961,7 +3961,7 @@
     <string name="notification_listener_not_allowed" msgid="3352962779597846538">"ခွင့်ပြုမထားပါ"</string>
     <string name="notif_listener_excluded_app_title" msgid="6679316209330349730">"အက်ပ်အားလုံးကို ကြည့်ခြင်း"</string>
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"အကြောင်းကြားချက်များပို့သော အက်ပ်တစ်ခုစီအတွက် ဆက်တင်များကို ပြောင်းပါ"</string>
-    <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"စက်ပစ္စည်းပေါ်တွင်ပြထားသော အက်ပ်များ"</string>
+    <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"စက်တွင်ပြထားသော အက်ပ်များ"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"ဤအက်ပ်က အဆင့်မြှင့်ထားသော ဆက်တင်များကို မပံ့ပိုးပါ"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR အထောက်အကူပြု ဝန်ဆောင်မှုများ"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"ထည့်သွင်းထားသည့် မည်သည့်အက်ပ်ကိုမျှ VR အထောက်အကူပြု ဝန်ဆောင်မှုများအဖြစ် ဖွင့်ရန် တောင်းဆိုမထားပါ။"</string>
@@ -4005,7 +4005,7 @@
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\'မနှောင့်ယှက်ရ\' ကိုခွင့်ပြုရန်"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"ထည့်သွင်းထားသည့် အက်ပ်များသည် \'မနှောက်ယှက်ရ\' သုံးခွင့် တောင်းဆိုမထားပါ"</string>
     <string name="loading_notification_apps" msgid="5139471829295287945">"အက်ပ်များကို ဖွင့်နေသည်…"</string>
-    <string name="app_notifications_off_desc" msgid="6691342160980435901">"သင့်တောင်းဆိုချက်အရ Android သည် ဤအက်ပ်၏ အကြောင်းကြားချက်များ ဤစက်ပစ္စည်းပေါ်တွင် ပေါ်မလာအောင် ပိတ်ထားပါသည်"</string>
+    <string name="app_notifications_off_desc" msgid="6691342160980435901">"သင့်တောင်းဆိုချက်အရ Android သည် ဤအက်ပ်၏ အကြောင်းကြားချက်များကို ဤစက်ပစ္စည်းပေါ်တွင် ပိတ်ထားပါသည်"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"သင့်တောင်းဆိုချက်အရ Android သည် ဤအကြောင်းကြားချက်အမျိုးအစားများ ဤစက်ပစ္စည်းပေါ်တွင် ပေါ်မလာအောင် ပိတ်ထားပါသည်"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"သင့်တောင်းဆိုချက်အရ Android သည် ဤအကြောင်းကြားချက်အုပ်စုများ ဤစက်ပစ္စည်းပေါ်တွင် ပေါ်မလာအောင် ပိတ်ထားပါသည်"</string>
     <string name="notification_channels" msgid="1502969522886493799">"အမျိုးအစားများ"</string>
@@ -4030,7 +4030,7 @@
     <string name="notification_toggle_off" msgid="3295373308338024844">"ပိတ်"</string>
     <string name="app_notification_block_title" msgid="3880322745749900296">"အားလုံးကို ပိတ်ဆို့ရန်။"</string>
     <string name="app_notification_block_summary" msgid="1804611676339341551">"ဤအကြောင်းကြားချက်များကို ဘယ်တော့မှ မပြပါနှင့်"</string>
-    <string name="notification_content_block_title" msgid="6689085826061361351">"အကြောင်းကြားချက်များ ပြပါ"</string>
+    <string name="notification_content_block_title" msgid="6689085826061361351">"အကြောင်းကြားချက်များ ပြရန်"</string>
     <string name="notification_content_block_summary" msgid="329171999992248925">"အရိပ်ထဲ သို့မဟုတ် တွဲချိတ်ထားသည့် စက်ပစ္စည်းများပေါ်တွင် အကြောင်းကြားချက်များကို ဘယ်တော့မှ မပြပါနှင့်"</string>
     <string name="notification_badge_title" msgid="6854537463548411313">"အကြောင်းကြားချက် အစက်ကို ခွင့်ပြုရန်"</string>
     <string name="notification_channel_badge_title" msgid="6505542437385640049">"အကြောင်းကြားချက် အစက် ပြရန်"</string>
@@ -4568,7 +4568,7 @@
     <string name="notification_summary_none" msgid="9179312319023988089">"အက်ပ်အားလုံးအတွက် ဖွင့်ထားသည်"</string>
     <string name="apps_summary" msgid="4007416751775414252">"အက်ပ် <xliff:g id="COUNT">%1$d</xliff:g> ခု ထည့်သွင်းထားသည်"</string>
     <string name="apps_summary_example" msgid="6034002063446955592">"အက်ပ်၂၄ ခုထည့်သွင်းခဲ့သည်"</string>
-    <string name="storage_summary" msgid="5903562203143572768">"<xliff:g id="PERCENTAGE">%1$s</xliff:g> အသုံးပြုထားသည် - <xliff:g id="FREE_SPACE">%2$s</xliff:g> လွတ်နေသည်"</string>
+    <string name="storage_summary" msgid="5903562203143572768">"<xliff:g id="PERCENTAGE">%1$s</xliff:g> သုံးထား - <xliff:g id="FREE_SPACE">%2$s</xliff:g> လွတ်"</string>
     <string name="storage_summary_with_sdcard" msgid="2063780050580228868">"စက်တွင်းသိုလှောင်ခန်း− <xliff:g id="PERCENTAGE">%1$s</xliff:g> ကို အသုံးပြုထားပြီး - <xliff:g id="FREE_SPACE">%2$s</xliff:g> လွတ်နေပါသည်"</string>
     <string name="display_summary" msgid="5526061030874717172">"<xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> ကြာမျှ လှုပ်ရှားမှုမရှိလျှင် ပိတ်လိုက်ပါ"</string>
     <string name="display_dashboard_summary" msgid="1599453894989339454">"မှောင်သည့် အပြင်အဆင်၊ ဖောင့်အရွယ်အစား၊ တောက်ပမှု"</string>
