--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -141,7 +141,7 @@
     <string name="bluetooth_pref_summary" product="tablet" msgid="3506962706611366830">"Permite que a tableta se comunique cos dispositivos Bluetooth próximos"</string>
     <string name="bluetooth_pref_summary" product="device" msgid="2192027516577675587">"Permite que o dispositivo se comunique cos dispositivos Bluetooth próximos"</string>
     <string name="bluetooth_pref_summary" product="default" msgid="768958961865499804">"Permite que o teléfono se comunique cos dispositivos Bluetooth próximos"</string>
-    <string name="bluetooth_disable_a2dp_hw_offload" msgid="5942913792817797541">"Desactivar alixeiram. de Bluetooth A2DP"</string>
+    <string name="bluetooth_disable_a2dp_hw_offload" msgid="5942913792817797541">"Desactivar alixeiramento de hardware de Bluetooth A2DP"</string>
     <string name="bluetooth_disable_a2dp_hw_offload_dialog_title" msgid="8610420176339657720">"Reiniciar dispositivo?"</string>
     <string name="bluetooth_disable_a2dp_hw_offload_dialog_message" msgid="8333029144800835996">"Debes reiniciar o dispositivo para cambiar esta opción"</string>
     <string name="bluetooth_disable_a2dp_hw_offload_dialog_confirm" msgid="3488695418187553566">"Reiniciar"</string>
@@ -911,7 +911,7 @@
     <string name="wifi_ask_disable" msgid="1663208096020309639">"<xliff:g id="REQUESTER">%s</xliff:g> quere desactivar a wifi"</string>
     <string name="art_verifier_for_debuggable_title" msgid="1926445785190030479">"Verificar o bytecode das aplicacións depurables"</string>
     <string name="art_verifier_for_debuggable_summary" msgid="4802875841862652879">"Permite que ART verifique o bytecode das aplicacións que se poidan depurar"</string>
-    <string name="show_refresh_rate" msgid="5742688821872354973">"Mostrar taxa actualización"</string>
+    <string name="show_refresh_rate" msgid="5742688821872354973">"Mostrar taxa de actualización"</string>
     <string name="show_refresh_rate_summary" msgid="3558118122374609663">"Mostra a taxa de actualización actual da pantalla"</string>
     <string name="nfc_quick_toggle_title" msgid="3607620705230351666">"NFC"</string>
     <string name="nfc_quick_toggle_summary" product="tablet" msgid="3622326550467939809">"Permite o intercambio de datos cando a tableta toca un dispositivo con NFC"</string>
@@ -2875,7 +2875,7 @@
     <string name="battery_saver_auto_routine" msgid="4656495097900848608">"Baseada na túa rutina"</string>
     <string name="battery_saver_pref_auto_routine_summary" msgid="4739240095966241508">"Activarase segundo a túa rutina"</string>
     <string name="battery_saver_auto_percentage" msgid="558533724806281980">"Baseada nunha porcentaxe"</string>
-    <string name="battery_saver_auto_routine_summary" msgid="3913145448299472628">"A función Aforro de batería actívase se se prevé que a batería pode esgotarse antes da seguinte carga. Esta estimación realízase a partir da rutina que segues habitualmente"</string>
+    <string name="battery_saver_auto_routine_summary" msgid="3913145448299472628">"A función Aforro de batería actívase se se prevé que a batería poida esgotarse antes da seguinte carga habitual"</string>
     <string name="battery_saver_auto_percentage_summary" msgid="6190884450723824287">"Activarase cando a batería estea ao <xliff:g id="PERCENT">%1$s</xliff:g>"</string>
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Establecer unha planificación"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Aumenta a duración da batería"</string>
@@ -3814,7 +3814,7 @@
     <string name="bubbles_feature_disabled_button_approve" msgid="2042628067101419871">"Activar"</string>
     <string name="bubbles_feature_disabled_button_cancel" msgid="8963409459448350600">"Cancelar"</string>
     <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"Activado/As conversas poden aparecer como iconas flotantes"</string>
-    <string name="notifications_bubble_setting_title" msgid="8287649393774855268">"Permitir que as aplicación mostren burbullas"</string>
+    <string name="notifications_bubble_setting_title" msgid="8287649393774855268">"Permitir que as aplicacións mostren burbullas"</string>
     <string name="notifications_bubble_setting_description" msgid="7336770088735025981">"Algunhas conversas aparecerán como iconas flotantes enriba doutras aplicacións"</string>
     <string name="bubble_app_setting_all" msgid="312524752846978277">"Todas as conversas poden mostrarse como burbullas"</string>
     <string name="bubble_app_setting_selected" msgid="4324386074198040675">"As conversas seleccionadas poden mostrarse como burbullas"</string>
@@ -5023,7 +5023,7 @@
     <string name="storage_size_large_alternate" msgid="7555149858858591495">"<xliff:g id="NUMBER">^1</xliff:g>"<small>" "<font size="20">"<xliff:g id="UNIT">^2</xliff:g>"</font></small>""</string>
     <string name="storage_volume_total" msgid="7102720999351050601">"en uso de <xliff:g id="TOTAL">%1$s</xliff:g>"</string>
     <string name="storage_percent_full" msgid="7211888326013020857">"en uso"</string>
-    <string name="storage_usage_summary" msgid="4591121727356723463">"Datos usados: <xliff:g id="NUMBER">%1$s</xliff:g> <xliff:g id="UNIT">%2$s</xliff:g>"</string>
+    <string name="storage_usage_summary" msgid="4591121727356723463">"Espazo usado: <xliff:g id="NUMBER">%1$s</xliff:g> <xliff:g id="UNIT">%2$s</xliff:g>"</string>
     <string name="storage_total_summary" msgid="7163360249534964272">"<xliff:g id="NUMBER">%1$s</xliff:g> <xliff:g id="UNIT">%2$s</xliff:g> en total"</string>
     <string name="clear_instant_app_data" msgid="5951258323364386357">"Borrar aplicación"</string>
     <string name="clear_instant_app_confirmation" msgid="3964731334459209482">"Queres quitar esta aplicación instantánea?"</string>
@@ -5068,7 +5068,7 @@
     <string name="disabled_feature" msgid="7151433782819744211">"Función non dispoñible"</string>
     <string name="disabled_feature_reason_slow_down_phone" msgid="5743569256308510404">"Desactivouse esta función porque fai que o teléfono vaia máis lento"</string>
     <string name="show_first_crash_dialog" msgid="1696584857732637389">"Mostrar sempre o cadro de diálogo de fallos"</string>
-    <string name="show_first_crash_dialog_summary" msgid="4692334286984681111">"Mostra o cadro de diálogo cada vez que falla unha aplicación."</string>
+    <string name="show_first_crash_dialog_summary" msgid="4692334286984681111">"Mostra o cadro de diálogo cada vez que falla unha aplicación"</string>
     <string name="angle_enabled_app" msgid="6044941043384239076">"Seleccionar aplicación compatible con ANGLE"</string>
     <string name="angle_enabled_app_not_set" msgid="4472572224881726067">"Non se definiu ningunha aplicación compatible con ANGLE"</string>
     <string name="angle_enabled_app_set" msgid="7811829383833353021">"Aplicación compatible con ANGLE: <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
@@ -5089,7 +5089,7 @@
     <!-- no translation found for graphics_driver_app_preference_values:2 (5391218026495225599) -->
     <!-- no translation found for graphics_driver_app_preference_values:3 (2586045835780389650) -->
     <string name="platform_compat_dashboard_title" msgid="1323980546791790236">"Cambios na compatibilidade das aplicacións"</string>
-    <string name="platform_compat_dashboard_summary" msgid="4036546607938791337">"Activa/desactiva os cambios de compatibilidade da aplicación"</string>
+    <string name="platform_compat_dashboard_summary" msgid="4036546607938791337">"Activa/desactiva os cambios de compatibilidade das aplicacións"</string>
     <string name="platform_compat_default_enabled_title" msgid="8973137337738388024">"Cambios activados de modo predeterminado"</string>
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Cambios desactivados de modo predeterminado"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Sen apps dispoñibles"</string>
@@ -5444,8 +5444,8 @@
     <string name="no_5g_in_dsds_text" product="default" msgid="772747677303920132">"Cando se utilicen dúas SIM, este teléfono limitarase á rede 4G. "<annotation id="url">"Máis información"</annotation></string>
     <string name="no_5g_in_dsds_text" product="tablet" msgid="4757328474425714624">"Cando se utilicen dúas SIM, esta tableta limitarase á rede 4G. "<annotation id="url">"Máis información"</annotation></string>
     <string name="no_5g_in_dsds_text" product="device" msgid="6983783505032683314">"Cando se utilicen dúas SIM, este dispositivo limitarase á rede 4G. "<annotation id="url">"Máis información"</annotation></string>
-    <string name="cached_apps_freezer" msgid="1057519579761550350">"Suspender execución das apps da memoria caché"</string>
-    <string name="overlay_settings_title" msgid="1032863083496396365">"Permitir superposic. na pantalla en Configuración"</string>
+    <string name="cached_apps_freezer" msgid="1057519579761550350">"Suspender execución das aplicacións da memoria caché"</string>
+    <string name="overlay_settings_title" msgid="1032863083496396365">"Permitir superposicións na pantalla en Configuración"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Permite que as aplicacións que se poden mostrar sobre outras se superpoñan nas pantallas da aplicación Configuración"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Contido multimedia"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Fixar reprodutor multimedia"</string>
