--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -2426,7 +2426,7 @@
     <string name="accessibility_daltonizer_footer_learn_more_content_description" msgid="2091679253892040910">"Өнгөний засварын тухай нэмэлт мэдээлэл авах"</string>
     <string name="accessibility_color_inversion_about_title" msgid="8275754480247040136">"Өнгө урвуулах тухай"</string>
     <string name="accessibility_color_inversion_footer_learn_more_content_description" msgid="5382579548498952445">"Өнгө урвуулах тухай нэмэлт мэдээлэл авах"</string>
-    <string name="accessibility_caption_primary_switch_title" msgid="8901149325574757370">"Хадмалыг харуулах"</string>
+    <string name="accessibility_caption_primary_switch_title" msgid="8901149325574757370">"Тайлбарыг харуулах"</string>
     <string name="accessibility_caption_primary_switch_summary" msgid="2754071646412717674">"Зөвхөн дэмждэг аппад"</string>
     <string name="captioning_caption_appearance_title" msgid="4501313548541670063">"Тайлбарын үсгийн хэмжээ, загвар"</string>
     <string name="captioning_caption_appearance_summary" msgid="7340741178479381312">"<xliff:g id="ACCESSIBILITY_FONT_SIZE">%1$s</xliff:g> текстийн хэмжээ"</string>
@@ -3942,7 +3942,7 @@
     <string name="no_notification_listeners" msgid="2839354157349636000">"Суулгасан апп-аас мэдэгдлийн хандалт хүссэн апп байхгүй байна."</string>
     <string name="notification_access_detail_switch" msgid="46386786409608330">"Мэдэгдэлд хандахыг зөвшөөрөх"</string>
     <string name="notification_assistant_security_warning_title" msgid="2972346436050925276">"<xliff:g id="SERVICE">%1$s</xliff:g>-н мэдэгдлийн хандалтыг зөвшөөрөх үү?"</string>
-    <string name="notification_assistant_security_warning_summary" msgid="4846559755787348129">"Сайжруулсан мэдэгдэл нь Android 12-н Орчинтой тохирсон мэдэгдлийг орлоно. Энэ онцлог нь санал болгосон үйлдэл, хариунуудыг харуулж, таны мэдэгдлийг цэгцэлнэ. \n\nСайжруулсан мэдэгдэл нь харилцагчийн нэр, мессеж зэрэг хувийн мэдээллийг оруулаад мэдэгдлийн контентод хандах боломжтой. Энэ онцлог мөн утасны дуудлагад хариулах болон Бүү саад бол горимыг хянах зэргээр мэдэгдлийг хаах эсвэл түүнд хариулах боломжтой."</string>
+    <string name="notification_assistant_security_warning_summary" msgid="4846559755787348129">"Сайжруулсан мэдэгдэл нь Android 12-н Орчинтой тохирсон мэдэгдлийг орлоно. Энэ онцлог нь санал болгосон үйлдэл, хариунуудыг харуулж, таны мэдэгдлийг цэгцэлнэ. \n\nСайжруулсан мэдэгдэл нь харилцагчийн нэр, мессеж зэрэг хувийн мэдээллийг оруулаад мэдэгдлийн агуулгад хандах боломжтой. Энэ онцлог мөн утасны дуудлагад хариулах болон Бүү саад бол горимыг хянах зэргээр мэдэгдлийг хаах эсвэл түүнд хариулах боломжтой."</string>
     <string name="notification_listener_security_warning_title" msgid="5791700876622858363">"<xliff:g id="SERVICE">%1$s</xliff:g>-д мэдэгдлийн хандалтыг зөвшөөрөх үү?"</string>
     <string name="notification_listener_security_warning_summary" msgid="3668606006326629153">"<xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> нь харилцагчийн нэр, таны хүлээн авах мессежийн текст зэрэг таны хувийн мэдээллийг оруулаад бүх мэдэгдлийг унших боломжтой болно. Энэ апп мөн мэдэгдлүүдийг түр хойшлуулах, хаах эсвэл утасны дуудлагад хариулах зэргээр мэдэгдэл дэх товчлуурууд дээр үйлдэл хийх боломжтой. \n\nЭнэ нь мөн аппад Бүү саад бол горимыг асаах эсвэл унтраах, түүнчлэн холбоотой тохиргоог өөрчлөх чадамжийг өгнө."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Хэрэв та <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>-н мэдэгдлийн хандалтыг унтраавал Бүү саад бол хандалт мөн адил унтрах болно."</string>
@@ -4667,7 +4667,7 @@
       <item quantity="one">1 хязгаарлалт</item>
     </plurals>
     <string name="operator_warning" msgid="5672761970087591211">"Оператор компанийн дата тооцоололт нь төхөөрөмжийн тооцоололтоос өөр байж болно"</string>
-    <string name="non_carrier_data_usage_warning" msgid="4707184871368847697">"Оператор компанийн сүлжээгээр ашигласан өгөгдлийг оруулдаггүй"</string>
+    <string name="non_carrier_data_usage_warning" msgid="4707184871368847697">"Оператор компанийн сүлжээгээр ашигласан датаг оруулдаггүй"</string>
     <string name="data_used_template" msgid="8229342096562327646">"<xliff:g id="ID_1">%1$s</xliff:g> ашигласан"</string>
     <string name="set_data_warning" msgid="1685771882794205462">"Датаны сануулгыг тохируулах"</string>
     <string name="data_warning" msgid="2925054658166062884">"Дата хэрэглээний сануулга"</string>
@@ -5103,7 +5103,7 @@
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Бүртгэл"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Төхөөрөмжийн нэр"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Үндсэн мэдээлэл"</string>
-    <string name="my_device_info_legal_category_title" msgid="7732792841537995127">"Хууль эрх зүйн захиргааны байгууллага"</string>
+    <string name="my_device_info_legal_category_title" msgid="7732792841537995127">"Хууль, журам"</string>
     <string name="my_device_info_device_details_category_title" msgid="4848438695638348680">"Төхөөрөмжийн дэлгэрэнгүй"</string>
     <string name="my_device_info_device_identifiers_category_title" msgid="2197063484127704153">"Төхөөрөмжийн таниулбар"</string>
     <string name="change_wifi_state_title" msgid="5629648102837821525">"Wi-Fi хяналт"</string>
@@ -5425,7 +5425,7 @@
     <string name="power_menu_power_volume_up_hint" msgid="1733051433583045623">"Асаах/унтраах болон яаралтай тусламжийн цэс:\nАсаах/унтраах болон дууны түвшнийг нэмэх товчийг зэрэг дарна уу."</string>
     <string name="power_menu_power_prevent_ringing_hint" msgid="5786494894009727654">"Хонх дуугаргахаас сэргийлэх:\nДууны түвшний цэсэд товчлол боломжтой байна."</string>
     <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"Дараад үргэлжлэх хугацааг удаан дарна уу"</string>
-    <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"Хэр удаан дарахаа сонгож мэдрэгшилийг тохируулаад асаах/унтраах товчийг удаан дарна уу"</string>
+    <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"Хэр удаан дарахаа сонгож мэдрэгшлийг тохируулаад асаах/унтраах товчийг удаан дарна уу"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Хурдан"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Удаан"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Түрийвч харуулах"</string>
