--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -2463,9 +2463,9 @@
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="791173297742998942">"ଲାଲ୍-ସବୁଜ"</string>
     <string name="daltonizer_mode_protanomaly_summary" msgid="482834207025141433">"ଲାଲ୍-ସବୁଜ"</string>
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2837137091067433059">"ନୀଳ-ହଳଦିଆ"</string>
-    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"ଅତିରିକ୍ତ ଡିମ୍"</string>
-    <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"ସ୍କ୍ରିନକୁ ଅତିରିକ୍ତ ଡିମ୍ କରନ୍ତୁ"</string>
-    <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"ଅତିରିକ୍ତ ଡିମ୍ ପାଇଁ ସର୍ଟକଟ୍"</string>
+    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"ଅତ୍ୟଧିକ ଡିମ"</string>
+    <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"ସ୍କ୍ରିନକୁ ଅତ୍ୟଧିକ ଡିମ କରନ୍ତୁ"</string>
+    <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"ଅତ୍ୟଧିକ ଡିମ ପାଇଁ ସର୍ଟକଟ"</string>
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"ଅତିରିକ୍ତ ଡିମ୍ ବିଷୟରେ"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"ସ୍କ୍ରିନକୁ ଆପଣଙ୍କ ଫୋନର ସର୍ବନିମ୍ନ ଉଜ୍ଜ୍ୱଳତାଠାରୁ ଅଧିକ ଡିମ୍ କରନ୍ତୁ"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"ସ୍କ୍ରିନକୁ ଆପଣଙ୍କ ଟାବଲେଟର ସର୍ବନିମ୍ନ ଉଜ୍ଜ୍ୱଳତାଠାରୁ ଅଧିକ ଡିମ୍ କରନ୍ତୁ"</string>
@@ -2962,7 +2962,7 @@
     <string name="vpn_settings_insecure_single" msgid="9012504179995045195">"ସୁରକ୍ଷିତ ନୁହେଁ"</string>
     <string name="vpn_settings_single_insecure_multiple_total" msgid="6107225844641301139">"<xliff:g id="VPN_COUNT">%d</xliff:g> ସୁରକ୍ଷିତ ନୁହେଁ"</string>
     <string name="vpn_settings_multiple_insecure_multiple_total" msgid="1706236062478680488">"<xliff:g id="VPN_COUNT">%d</xliff:g> ସୁରକ୍ଷିତ ନୁହେଁ"</string>
-    <string name="adaptive_connectivity_title" msgid="7464959640138428192">"ଆଡପ୍ଟିଭ୍ କନେକ୍ଟିଭିଟି"</string>
+    <string name="adaptive_connectivity_title" msgid="7464959640138428192">"ଆଡେପ୍ଟିଭ କନେକ୍ଟିଭିଟି"</string>
     <string name="adaptive_connectivity_summary" msgid="3648731530666326885">"ଆପଣଙ୍କ ନେଟୱାର୍କ ସଂଯୋଗଗୁଡ଼ିକୁ ସ୍ୱଚାଳିତ ଭାବେ ପରିଚାଳନା କରି ବ୍ୟାଟେରୀ ଲାଇଫ୍ ବଢ଼ାଏ ଏବଂ ଡିଭାଇସର କାର୍ଯ୍ୟଦକ୍ଷତାକୁ ଉନ୍ନତ କରେ"</string>
     <string name="adaptive_connectivity_switch_on" msgid="3653067561620745493">"ଚାଲୁ ଅଛି"</string>
     <string name="adaptive_connectivity_switch_off" msgid="5076172560836115265">"ବନ୍ଦ ଅଛି"</string>
@@ -3628,7 +3628,7 @@
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"ଆଲାର୍ମର ଭଲ୍ୟୁମ୍‌"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"ରିଙ୍ଗ ଏବଂ ବିଜ୍ଞପ୍ତି ଭଲ୍ୟୁମ୍"</string>
     <string name="notification_volume_option_title" msgid="4838818791683615978">"ସୂଚନା ଭଲ୍ୟୁମ"</string>
-    <string name="ringtone_title" msgid="3271453110387368088">"ଫୋନ୍‌ ରିଙ୍ଗଟୋନ୍‌"</string>
+    <string name="ringtone_title" msgid="3271453110387368088">"ଫୋନ ରିଂଟୋନ"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"ଡିଫଲ୍ଟ ବିଜ୍ଞପ୍ତି ସାଉଣ୍ଡ"</string>
     <string name="notification_unknown_sound_title" msgid="1319708450698738980">"ଆପ୍‌ ଦ୍ୱାରା ପ୍ରଦତ୍ତ ଶବ୍ଦ"</string>
     <string name="notification_sound_default" msgid="8630353701915294299">"ଡିଫଲ୍ଟ ବିଜ୍ଞପ୍ତି ସାଉଣ୍ଡ"</string>
