--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -1810,9 +1810,9 @@
     <string name="main_clear_progress_text" msgid="4636695115176327972">"Čakajte…"</string>
     <string name="call_settings_title" msgid="2531072044177194164">"Nastavenia hovorov"</string>
     <string name="call_settings_summary" msgid="8244293779053318053">"Nastavenie hlasovej schránky, presmerovania hovorov, čakajúcich hovorov a identifikácie volajúceho"</string>
-    <string name="tether_settings_title_usb" msgid="5926474044238409099">"Pripojenie cez USB"</string>
+    <string name="tether_settings_title_usb" msgid="5926474044238409099">"Tethering cez USB"</string>
     <string name="tether_settings_title_wifi" msgid="4327056146425282159">"Prenosný prístupový bod"</string>
-    <string name="tether_settings_title_bluetooth" msgid="8878813702520141084">"Pripojenie cez Bluetooth"</string>
+    <string name="tether_settings_title_bluetooth" msgid="8878813702520141084">"Tethering cez Bluetooth"</string>
     <string name="tether_settings_title_usb_bluetooth" msgid="4437274151658505496">"Zdieľané pripojenie"</string>
     <string name="tether_settings_title_all" msgid="6807525590937697228">"Hotspot a tethering"</string>
     <string name="tether_settings_summary_hotspot_on_tether_on" msgid="6110241048260139633">"Hotspot je zapnutý, dátové pripojenie sa zdieľa"</string>
@@ -1845,10 +1845,10 @@
     <string name="disable_wifi_hotspot_when_bluetooth_and_ethernet_on" msgid="2943464651349235967">"Zdieľať internet len cez Bluetooth a Ethernet"</string>
     <string name="disable_wifi_hotspot_when_usb_and_bluetooth_and_ethernet_on" msgid="3934609816834760008">"Zdieľať internet len cez USB, Bluetooth a Ethernet"</string>
     <string name="usb_title" msgid="1157283449840612901">"USB"</string>
-    <string name="usb_tethering_button_text" msgid="7364633823180913777">"Pripojenie cez USB"</string>
+    <string name="usb_tethering_button_text" msgid="7364633823180913777">"Tethering cez USB"</string>
     <string name="usb_tethering_subtext" product="default" msgid="3168636595109044213">"Zdieľať internetové pripojenie telefónu cez USB"</string>
     <string name="usb_tethering_subtext" product="tablet" msgid="1749659335004856576">"Zdieľať internetové pripojenie tabletu cez USB"</string>
-    <string name="bluetooth_tether_checkbox_text" msgid="6108398414967813545">"Pripojenie cez Bluetooth"</string>
+    <string name="bluetooth_tether_checkbox_text" msgid="6108398414967813545">"Tethering cez Bluetooth"</string>
     <string name="bluetooth_tethering_subtext" product="tablet" msgid="2023654677593885805">"Zdieľať internetové pripojenie tabletu cez Bluetooth"</string>
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Zdieľať internetové pripojenie telefónu cez Bluetooth"</string>
     <string name="bluetooth_tethering_off_subtext_config" msgid="6941934844527406581">"Internetové pripojenie zariadenia <xliff:g id="DEVICE_NAME">%1$d</xliff:g> sa zdieľa cez Bluetooth"</string>
@@ -2373,7 +2373,7 @@
     <string name="accessibility_tutorial_dialog_title_gesture_settings" msgid="6800684770875867559">"Použitie gesta dostupnosti"</string>
     <string name="accessibility_tutorial_dialog_message_button" msgid="7002398857479782303">"Ak chcete použiť túto funkciu, klepnite na tlačidlo dostupnosti <xliff:g id="ACCESSIBILITY_ICON">%s</xliff:g> v dolnej časti obrazovky.\n\nFunkcie prepnete pridržaním tlačidla dostupnosti."</string>
     <string name="accessibility_tutorial_dialog_message_floating_button" msgid="2551777208185138391">"Ak chcete túto funkciu použiť, klepnite na tlačidlo dostupnosti na obrazovke."</string>
-    <string name="accessibility_tutorial_dialog_message_volume" msgid="5033080515460519183">"Túto funkciu použijete tak, že pridržíte obe tlačidlá hlasitosti."</string>
+    <string name="accessibility_tutorial_dialog_message_volume" msgid="5033080515460519183">"Túto funkciu použijete tak, že podržíte obe tlačidlá hlasitosti."</string>
     <string name="accessibility_tutorial_dialog_message_triple" msgid="5219991116201165146">"Ak chcete spustiť alebo zastaviť zväčšenie, klepnite trikrát na ľubovoľné miesto na obrazovke."</string>
     <string name="accessibility_tutorial_dialog_message_gesture" msgid="4148062210755434854">"Ak chcete použiť túto funkciu, potiahnite dvoma prstami z dolnej časti obrazovky nahor.\n\nFunkcie prepnete potiahnutím dvoma prstami smerom nahor a pridržaním."</string>
     <string name="accessibility_tutorial_dialog_message_gesture_talkback" msgid="8142847782708562793">"Ak chcete použiť túto funkciu, potiahnite troma prstami z dolnej časti obrazovky nahor.\n\nFunkcie prepnete potiahnutím troma prstami smerom nahor a pridržaním."</string>
@@ -2394,7 +2394,7 @@
     <string name="footer_learn_more_content_description" msgid="8843798273152131341">"Ďalšie informácie o funkcii <xliff:g id="SERVICE">%1$s</xliff:g>"</string>
     <string name="accessibility_shortcut_edit_dialog_title_hardware" msgid="2356853121810443026">"Podržanie tlačidiel hlasitosti"</string>
     <string name="accessibility_shortcut_hardware_keyword" msgid="3921915304537166064">"podržanie tlačidiel hlasitosti"</string>
-    <string name="accessibility_shortcut_edit_dialog_summary_hardware" msgid="2503134386397991634">"Pridržte obe tlačidlá hlasitosti"</string>
+    <string name="accessibility_shortcut_edit_dialog_summary_hardware" msgid="2503134386397991634">"Podržte obe tlačidlá hlasitosti"</string>
     <string name="accessibility_shortcut_edit_dialog_title_triple_tap" msgid="6672798007229795841">"Tri klepnutia na obrazovku"</string>
     <string name="accessibility_shortcut_triple_tap_keyword" msgid="6863958573135995927">"tri klepnutia na obrazovku"</string>
     <string name="accessibility_shortcut_edit_dialog_summary_triple_tap" msgid="2102327956423320536">"{0,number,integer}‑krát rýchlo klepnite na obrazovku. Táto skratka môže zariadenie spomaliť."</string>
@@ -2959,8 +2959,8 @@
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Predĺženie výdrže batérie"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Vypnúť po nabití"</string>
     <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Šetrič batérie sa vypne, keď sa telefón nabije nad <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Šetrič batérie sa vypne, keď sa tablet nabije nad <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Šetrič batérie sa vypne, keď sa zariadenie nabije nad <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
+    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Vypnúť šetrič batérie, keď je tablet nabitý nad <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
+    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Vypnúť šetrič batérie, keď je zariadenie nabité nad <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Zapnúť"</string>
@@ -3042,7 +3042,7 @@
     <string name="vpn_settings_multiple_insecure_multiple_total" msgid="1706236062478680488">"Nezabezpečené: <xliff:g id="VPN_COUNT">%d</xliff:g>"</string>
     <string name="adaptive_connectivity_title" msgid="7464959640138428192">"Adaptívne pripojenie"</string>
     <string name="adaptive_connectivity_summary" msgid="3648731530666326885">"Predĺži výdrž batérie a zvýši výkonnosť zariadenia automatickým spravovaním pripojení k sieti"</string>
-    <string name="adaptive_connectivity_switch_on" msgid="3653067561620745493">"Zapnúť"</string>
+    <string name="adaptive_connectivity_switch_on" msgid="3653067561620745493">"Zapnuté"</string>
     <string name="adaptive_connectivity_switch_off" msgid="5076172560836115265">"Vypnúť"</string>
     <string name="credentials_title" msgid="7535942196886123656">"Úložisko poverení"</string>
     <string name="credentials_install" msgid="3933218407598415827">"Inštalovať certifikát"</string>
@@ -3851,7 +3851,7 @@
     <string name="work_ringtone_title" msgid="4810802758746102589">"Tón zvonenia pracovného telefónu"</string>
     <string name="work_notification_ringtone_title" msgid="2955312017013255515">"Predvolený zvuk pracovného upozornenia"</string>
     <string name="work_alarm_ringtone_title" msgid="3369293796769537392">"Predvolený zvuk pracovného budíka"</string>
-    <string name="work_sound_same_as_personal" msgid="1836913235401642334">"Rovnaké ako osobný profil"</string>
+    <string name="work_sound_same_as_personal" msgid="1836913235401642334">"Rovnaký ako osobný profil"</string>
     <string name="work_sync_dialog_title" msgid="7810248132303515469">"Chcete používať zvuky osobného profilu?"</string>
     <string name="work_sync_dialog_yes" msgid="5785488304957707534">"Potvrdiť"</string>
     <string name="work_sync_dialog_message" msgid="5066178064994040223">"Váš pracovný profil bude používať rovnaké zvuky ako osobný"</string>
@@ -3866,7 +3866,7 @@
     <string name="recent_notifications_see_all_title" msgid="3087299996651692987">"Zobraziť všetko za posledných 7 dní"</string>
     <string name="general_notification_header" msgid="3669031068980713359">"Spravovanie"</string>
     <string name="app_notification_field" msgid="3858667320444612716">"Nastavenia aplikácie"</string>
-    <string name="app_notification_field_summary" msgid="5981393613897713471">"Ovládajte upozornenia z jednotlivých aplikácií"</string>
+    <string name="app_notification_field_summary" msgid="5981393613897713471">"Ovládať upozornenia z jednotlivých aplikácií"</string>
     <string name="advanced_section_header" msgid="6478709678084326738">"Všeobecné"</string>
     <string name="profile_section_header" msgid="4970209372372610799">"Pracovné upozornenia"</string>
     <string name="smart_notifications_title" msgid="8995288376897952015">"Prispôsobivé upozornenia"</string>
@@ -3906,8 +3906,8 @@
     <string name="bubbles_feature_disabled_button_approve" msgid="2042628067101419871">"Zapnúť"</string>
     <string name="bubbles_feature_disabled_button_cancel" msgid="8963409459448350600">"Zrušiť"</string>
     <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"Zapnuté / konverzácie sa môžu zobrazovať ako plávajúce ikony"</string>
-    <string name="notifications_bubble_setting_title" msgid="8287649393774855268">"Povoliť zobrazovanie bublín aplikáciami"</string>
-    <string name="notifications_bubble_setting_description" msgid="7336770088735025981">"Niektoré konverzácie sa zobrazia ako plávajúce ikony v hornej časti iných aplikácií"</string>
+    <string name="notifications_bubble_setting_title" msgid="8287649393774855268">"Povoliť aplikáciám zobrazovať bubliny"</string>
+    <string name="notifications_bubble_setting_description" msgid="7336770088735025981">"Niektoré konverzácie sa zobrazia ako plávajúce ikony navrchu iných aplikácií"</string>
     <string name="bubble_app_setting_all" msgid="312524752846978277">"Všetky konverzácie sa môžu zobrazovať ako bubliny"</string>
     <string name="bubble_app_setting_selected" msgid="4324386074198040675">"Vybrané konverzácie sa môžu zobrazovať ako bubliny"</string>
     <string name="bubble_app_setting_none" msgid="8643594711863996418">"Nič sa nemôže zobrazovať ako bublina"</string>
@@ -4027,7 +4027,7 @@
     </plurals>
     <string name="notifications_sent_never" msgid="9081278709126812062">"Nikdy"</string>
     <string name="manage_notification_access_title" msgid="6481256069087219982">"Upozornenia v zariadeniach a aplikáciách"</string>
-    <string name="manage_notification_access_summary" msgid="2907135226478903997">"Ovládajte, ktoré aplikácie a zariadenia budú môcť čítať upozornenia"</string>
+    <string name="manage_notification_access_summary" msgid="2907135226478903997">"Ovládať, ktoré aplikácie a zariadenia môžu čítať upozornenia"</string>
     <string name="work_profile_notification_access_blocked_summary" msgid="8643809206612366067">"Prístup k upozorneniam pracovného profilu je zablokovaný"</string>
     <string name="manage_notification_access_summary_zero" msgid="7528633634628627431">"Aplikácie nesmú čítať upozornenia"</string>
     <plurals name="manage_notification_access_summary_nonzero" formatted="false" msgid="3703008881487586312">
@@ -4984,8 +4984,8 @@
     <string name="gesture_preference_summary" product="default" msgid="7941981260703379398">"Rýchle gestá na ovládanie telefónu"</string>
     <string name="gesture_preference_summary" product="tablet" msgid="4031666250963488007">"Rýchle gestá na ovládanie tabletu"</string>
     <string name="gesture_preference_summary" product="device" msgid="3520072325356373349">"Rýchle gestá na ovládanie zariadenia"</string>
-    <string name="double_tap_power_for_camera_title" msgid="7982364144330923683">"Rýchlo spustiť fotoaparát"</string>
-    <string name="double_tap_power_for_camera_summary" msgid="1100926048598415509">"Rýchlo otvoriť fotoaparát dvojitým stlačením vypínača. Funguje to na každej obrazovke."</string>
+    <string name="double_tap_power_for_camera_title" msgid="7982364144330923683">"Rýchlo spustiť kameru"</string>
+    <string name="double_tap_power_for_camera_summary" msgid="1100926048598415509">"Rýchlo otvoriť kameru dvojitým stlačením vypínača. Funguje to na každej obrazovke."</string>
     <string name="double_tap_power_for_camera_suggestion_title" msgid="4299496243418753571">"Rýchle spustenie fotoaparátu"</string>
     <string name="double_twist_for_camera_mode_title" msgid="472455236910935684">"Otočiť fotoaparát na selfie"</string>
     <string name="double_twist_for_camera_mode_summary" msgid="592503740044744951"></string>
@@ -5595,8 +5595,8 @@
     <string name="quick_controls_lower" msgid="6675573610027367819">"ovládanie zariadení"</string>
     <string name="cards_passes_sentence" msgid="1866311782387946944">"Karty a lístky"</string>
     <string name="cards_passes_lower" msgid="2429722007109957877">"karty a lístky"</string>
-    <string name="power_menu_setting_name" msgid="7291642927216934159">"Pridržte vypínač"</string>
-    <string name="power_menu_summary_long_press_for_assist_enabled" msgid="5322150755041458952">"Pridržaním aktivujte Asistenta"</string>
+    <string name="power_menu_setting_name" msgid="7291642927216934159">"Pridržanie vypínača"</string>
+    <string name="power_menu_summary_long_press_for_assist_enabled" msgid="5322150755041458952">"Pridržaním aktivovať Asistenta"</string>
     <string name="power_menu_summary_long_press_for_assist_disabled_with_power_menu" msgid="5165714995895517816">"Pridržaním zobrazte ponuku vypínača"</string>
     <string name="power_menu_summary_long_press_for_assist_disabled_no_action" msgid="2831598484771657432">"Pridržte, je deaktivovaný"</string>
     <string name="lockscreen_privacy_not_secure" msgid="3251276389681975912">"Pred použitím je potrebné nastaviť zámku obrazovky"</string>
@@ -5678,7 +5678,7 @@
     <string name="default_active_sim_calls" msgid="2390973682556353558">"hovory"</string>
     <string name="default_active_sim_sms" msgid="8041498593025994921">"SMS"</string>
     <string name="default_active_sim_mobile_data" msgid="6798083892814045301">"mobilné dáta"</string>
-    <string name="wifi_scan_notify_message" msgid="4130641837826688879">"Aplikácie a služby môžu kedykoľvek vyhľadávať siete Wi‑Fi (a to aj vtedy, keď je pripojenie Wi‑Fi vypnuté), čím zlepšujú prostredie v zariadení. Môžete to využiť napríklad pri zlepšovaní funkcií a služieb podmienených polohou. Môžete to zmeniť v nastaveniach vyhľadávania sietí Wi‑Fi. "<annotation id="link">"Zmeniť"</annotation></string>
+    <string name="wifi_scan_notify_message" msgid="4130641837826688879">"Aplikácie a služby môžu kedykoľvek vyhľadávať siete Wi‑Fi (a to aj vtedy, keď je pripojenie Wi‑Fi vypnuté), čím zlepšujú prostredie v zariadení. Môžu tak napríklad zlepšovať fungovanie funkcií a služieb podmienených polohou. Toto nastavenie môžete zmeniť v nastaveniach vyhľadávania sietí Wi‑Fi. "<annotation id="link">"Zmeniť"</annotation></string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Pripojené"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Bez pripojenia"</string>
